--- a/src/components/CartList.css
+++ b/src/components/CartList.css
@@ -1,15 +1,25 @@
 .product-cart-img {
   margin-left: 2em;
-  margin-right: 1em;
   width: 10%;
+}
+.cart-list-button {
+  width: 23px
 }
 
 .product-cart-name,
 .product-cart-price {
-  margin-right: 1em;
   display: inline;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
+.product-cart-name {
   text-decoration: none;
-  color: black;
+  color: #008f11;
+}
+
+.product-cart-name:hover {
+  text-decoration: underline;
 }
 
 .delete-product {
@@ -21,12 +31,41 @@
   width: 28px;
 }
 
-.cart-list-wrapper {
+.add-remove-wrapper {
   display: flex;
-  justify-content: center;
+  align-items: center;
+}
+
+.product-link-wrapper {
+  text-decoration: none;
+}
+
+.cart-list-wrapper {
+  padding-left: 1em;
+  padding-right: 1em;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding-bottom: 0.7em;
   padding-top: 0.7em;
   margin-bottom: 10px;
-  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+}
+
+@media (max-width: 496px) {
+  .delete-product {
+    margin-right: 0;
+  }
+
+  .product-cart-img {
+    margin-left: 0;
+    margin-bottom: 1em;
+    width: 20%;
+  }
+
+  .cart-list-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 }
