--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -29,3 +29,11 @@
     display: flex;
     align-items: center;
 }
+
+.home-img {
+    width: 60%;
+    max-width: 25em ;
+    padding: 2em;
+    margin-left: auto;
+    margin-right: auto;
+}
