--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -3,4 +3,7 @@
     grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
     gap: 1em;
     padding: 1.2em;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
 }
